--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="section" id="section1"><h1>Party Details</h1></div>
 	<div class="section" id="section2"><h1>Biserica Details</h1></div>
 	<div class="section" id="section3">
-		<h1>Ne bucuram sa veniti bla bla RSVP mai jos</h1>
+		<h1>RSVP mai jos</h1>
 		<button class="button-59" data-tally-open="wAbg4k" id="RSVP" data-tally-layout="modal" role="button">RSVP</button>
 	</div>
 </div>
