--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 	</div>
 	<div id="section4" class="flex flex-col bg-gradient-to-r from-[#40fff2] to-[#3fbcff] h-[100vh] justify-center items-center">
 		<h1 class="text-[5rem] text-center text-white" style="font-family: Fabiola;">RSVP mai jos</h1>
-		<button id="button" class="w-[160px] h-[78px] text-4xl py-6 bg-white text-center border-2 border-black rounded hover:border-blue hover:text-blue transition ease-in-out" data-tally-open="wAbg4k" id="RSVP" data-tally-layout="modal" data-tally-overlay="1" data-tally-width="398" data-tally-auto-close="4000" role="button" style="font-family: Fabiola;">RSVP</button>
+		<div data-tally-open="wAbg4k" data-tally-layout="modal" data-tally-overlay="1" data-tally-width="398" data-tally-auto-close="4000" class="button-6" role="button">
+			<span> &nbsp; &nbsp; &nbsp; R S V P &nbsp; &nbsp; &nbsp; </span>
+		</div>
+		<!-- <button id="button" class="w-[160px] h-[78px] text-4xl py-6 bg-white text-center border-2 border-black rounded hover:border-blue hover:text-blue transition ease-in-out" data-tally-open="wAbg4k" id="RSVP" data-tally-layout="modal" data-tally-overlay="1" data-tally-width="398" data-tally-auto-close="4000" role="button" style="font-family: Fabiola;">RSVP</button> -->
 	</div>
 </div>
 
