--- a/index.html
+++ b/index.html
@@ -18,9 +18,32 @@
 <link rel="stylesheet" href="https://use.typekit.net/fgz7vkg.css">
 <script async src="https://tally.so/widgets/embed.js"></script>
 <body>
-<div class="w-full h-[100vh] flex-1 flex-column">
-	<div id="section1" class="h-[100vh] bg-[#788343] flex justify-center items-center">
+<div class="w-full h-full">
+	<div id="section1" class="container bg-[#faf6de]">
+		<div class="left">
+            <img src="images/raluca_ducu_1.jpg" alt="Left Image">
+        </div>
+        <div class="right">
+            <img src="images/image.png" alt="Right Image">
+        </div>
+		<!-- <div class="text-center">
+			<h1 class="text-[5rem] text-[#788343]" style="font-family: Fabiola;">Ne căsătorim</h1>
+			<h1 class="text-[3rem] text-[#788343]" style="font-family: Fabiola;">Raluca&Ducu</h1>
+			<h1 class="text-[3rem] text-[#788343]" style="font-family: Fabiola;">Cluj-Napoca</h1>
+			<h1 class="text-[3rem] text-[#788343]" style="font-family: Fabiola;">31 mai 2025</h1>
+			<h1 class="text-[3rem] text-[#788343]" style="font-family: Fabiola;">Ziua e mai frumoasă cu voi alături!</h1>
+		</div> -->
+		<!--<h1 class="text-[4rem] text-center text-white" style="font-family: Fabiola;">Raluca&Ducu</h1>
+		<h1 class="text-[3rem] text-center text-white" style="font-family: Fabiola;">Cluj-Napoca</h1>
+		<h1 class="text-[3rem] text-center text-white" style="font-family: Fabiola;">31 mai 2025</h1>
+		<h1 class="text-[3rem] text-center text-white" style="font-family: Fabiola;">Ziua e mai frumoasă cu voi alături!</h1> -->
+		<!-- <h1>Ne căsătorim</h1>
+        <div class="heart text-[5rem] text-center text-white" style="font-family: Fabiola;">❤️</div>
 		<h1 class="text-[5rem] text-center text-white" style="font-family: Fabiola;">Raluca&Ducu</h1>
+        <div class="details text-[5rem] text-center text-white" style="font-family: Fabiola;">Cluj-Napoca</div>
+        <div class="details text-[5rem] text-center text-white" style="font-family: Fabiola;">31 mai 2025</div>
+        <div class="message text-[5rem] text-center text-white" style="font-family: Fabiola;">Ziua e mai frumoasă cu voi alături!</div> -->
+		<!-- <h1 class="text-[5rem] text-center text-white" style="font-family: Fabiola;">Raluca&Ducu</h1> -->
 	</div>
 	<div id="section2" class="h-[100vh] bg-[#FBB01B] flex justify-center items-center">
 		<h1 class="text-[5rem] text-center text-white" style="font-family: Fabiola;">Party Details</h1>
