--- a/index.html
+++ b/index.html
@@ -1,216 +1,328 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Raluca & Ducu</title>
-	<meta name="author" content="Oana Bondar" />
-	<meta name="description" content="mariaj" />
-	<script src="https://cdn.tailwindcss.com"></script>
-	<style>
-		@font-face {
-			font-family: "Fabiola";
-			src: url(/fonts/fabiola.otf) format("truetype");
-		}
-	</style>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="examples.css">
-<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3.2.0/dist/email.min.js"></script></head>
-<link rel="stylesheet" href="https://use.typekit.net/fgz7vkg.css">
-<script async src="https://tally.so/widgets/embed.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://tally.so/widgets/embed.js"></script>
+  <style>
+    @font-face {
+        font-family: "Fabiola";
+        src: url(/fonts/fabiola.otf) format("truetype");
+    }
+</style>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <title>Responsive Images Layout</title>
+  <style>
+    body {
+    background-color: #1E2617;
+      margin: 0;
+      padding: 0;
+      font-family: Fabiola, serif;
+      background-color: #1E2617;
+    }
+
+    .container1 {
+        background-color: #1E2617;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+
+    .container2 {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+
+    .image-left {
+      flex: 0 0 auto; /* Prevent resizing of the image container */
+      max-width: 50%; /* Ensures it takes up at most half of the screen */
+    }
+
+    .image-left img {
+      display: block;
+      max-width: 100%; /* Ensures the image doesn't exceed the container */
+      max-height: 100vh; /* Prevents the image from exceeding the screen height */
+      width: auto; /* Maintains aspect ratio */
+      height: 100vh;
+      object-fit: cover;
+    }
+
+    .image-right {
+      flex: 1 1 auto; /* Allows the right side to take remaining space */
+      display: flex;
+      justify-content: center; /* Center the image horizontally */
+      align-items: center; /* Center the image vertically */
+    }
+
+    .image-right img {
+      max-width: 100%;
+      max-height: 100vh; /* Prevents the image from exceeding the screen height */
+      width: auto; /* Maintains aspect ratio */
+      height: 90vh;
+    }
+
+    .group {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 50%; /* Half the width on large screens */
+      height: 100%; /* Full height of the viewport */
+    }
+
+    .image {
+      max-width: 80%;
+      max-height: 40%;
+      object-fit: contain;
+      margin: 10px 0;
+    }
+
+    .text {
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #333;
+    }
+
+    .text-container {
+        z-index: -1;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      box-sizing: border-box;
+      background-color: #1E2617;
+      text-align: center;
+      margin: -100px;
+    }
+
+    .custom-text p {
+      margin: 5px 0;
+      font-size: 2.5rem;
+      font-weight: bold;
+      color: #f3d9e8;
+    }
+
+    .custom-text time {
+      display: block;
+      font-size: 2rem;
+      color: #f3d9e8;
+      margin: 5px 0;
+    }
+
+    .custom-text span {
+        font-family: 'Raleway', serif;
+      font-size: 1.3rem;
+      color: #f3d9e8;
+      display: block;
+    }
+
+    .custom-text .italic {
+        font-family: 'Raleway', serif;
+      font-style: italic;
+      color: #f3d9e8;
+      margin-top: 10px;
+      font-size: 1rem;
+    }
+
+    .detailsSpan span {
+        size: 0.7rem;
+    }
+
+    .button-container {
+      margin-top: 20px;
+    }
+
+    .left-button {
+        margin-top: 80px;
+    }
+
+    .button-container a {
+      display: inline-block;
+      padding: 8px 15px 6px 15px;
+      font-size: 1.3rem;
+      color: #f3d9e8;
+      background-color: #1E2617;
+      text-decoration: none;
+      border: 1px solid #ffffff;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+
+    .button-container a:hover {
+      background-color: #788343;
+    }
+
+    .section2 {
+        display: flex;
+      flex-direction: row; 
+    }
+
+    .text-box {
+      text-align: center;
+      max-width: 80%; /* Adjust for readability */
+      color: #f3d9e8;
+      margin-bottom: 20px; /* Add spacing between text and image */
+    }
+
+    .text-box p {
+      font-family: 'Raleway', serif;
+    }
+
+    .text-box h1 {
+      font-size: 2.5rem;
+      margin-bottom: -10px;
+    }
+    .flowers img {
+      max-width: 50vw; /* Limit image width to 90% of the viewport width */
+      height: auto; /* Maintain aspect ratio */
+    }
+
+    .button-6 {
+      margin-top: 50px; /* Add space above the RSVP button */
+      margin-bottom: -30px;
+      display: inline-block;
+      padding: 10px 20px 7px 20px;
+      background-color: #f3d9e8;
+      color: #1E2617;
+      text-transform: uppercase;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 1.3rem
+    }
+
+    .button-6:hover {
+      background-color: #e5c2da;
+    }
+
+    .section3 {
+        display: flex;
+      flex-direction: column; /* Stack text and image vertically */
+      height: 100vh; /* Full viewport height */
+      font-family: Fabiola, serif;
+      background-color: #1E2617;
+      justify-content: center; /* Center both sections vertically */
+      align-items: center; 
+    }
+
+    @media (max-width: 768px) {
+      .container1 {
+        flex-direction: column; /* Stack images vertically on small screens */
+        height: auto; /* Allow scrolling when stacked */
+      }
+
+      .image-left{
+        max-width: 100vh;
+        width: auto; /* Full width for each image */
+        height: 100vh; /* Full height of the viewport for each image */
+        overflow: hidden;
+        object-fit: cover;
+      }
+
+      .image-left img {
+      display: block;
+      max-width: 100vh; /* Ensures the image doesn't exceed the container */
+      max-height: 100vh; /* Prevents the image from exceeding the screen height */
+      width: auto; /* Maintains aspect ratio */
+      height: 100vh;
+      object-fit: cover;
+      overflow: hidden;
+    }
+      .image-right {
+        width: 100%; /* Full width for each image */
+        height: 100vh; /* Full height of the viewport for each image */
+      }
+
+      .image-right img {
+        max-width: 100vw; 
+        max-height: 100%;
+        width: auto;
+        height: auto;
+      }
+
+      .section2 {
+        flex-direction: column; /* Stack groups vertically */
+      }
+
+      .group {
+        width: 100%; /* Full width */
+        height: 100vh; /* Full viewport height */
+      }
+      .text-container {
+        margin: -30px;
+      }
+
+      .text-box {
+        font-size: 16px; /* Adjust font size for smaller screens */
+      }
+
+      .flowers img {
+        max-width: 90vw; /* Ensure image scales properly on smaller screens */
+      }
+    }
+  </style>
+</head>
 <body>
-<div class="w-full h-full">
-	<div id="section1" class="container bg-[#faf6de]">
-		<div class="left">
-            <img src="images/raluca_ducu_1.jpg" alt="Left Image">
+  <div class="container1">
+    <div class="image-left">
+      <img src="images/raluca_ducu_alternative.jpg" alt="Left Image">
+    </div>
+    <div class="image-right">
+      <img src="images/invite_dark_transparent.png" alt="Right Image">
+    </div>
+  </div>
+  <div class="section2">
+  <!-- Left Group -->
+  <div class="group left-group">
+    <img class="image" src="images/flori_dark_up.png" alt="Top Image Left">
+    <div class="text-container custom-text">
+        <p>C E R E M O N I A</p>
+        <time>15:30</time>
+        <span>Parohia Sf. Mare Mc. Mina</span>
+        <span class="detailsSpan">(Str. Vasile Conta 10, Cluj-Napoca, Cluj)</span>
+        <div class="button-container left-button">
+          <a href="https://www.google.com/maps" target="_blank">H A R T A</a>
         </div>
-        <div class="right">
-            <img src="images/image.png" alt="Right Image">
+      </div>
+    <img class="image" src="images/flori_dark_down.png" alt="Bottom Image Left">
+  </div>
+
+  <!-- Right Group -->
+  <div class="group right-group">
+    <img class="image" src="images/flori_dark_up.png" alt="Top Image Right">
+    <div class="text-container custom-text">
+        <p>C E L E B R A R E A</p>
+        <time>18:00</time>
+        <span>The Wild Garden</span>
+        <span class="detailsSpan">(Str. Drumul Sf. Ioan 266, Cluj-Napoca, Cluj)</span>
+        <span class="italic">Parcarea rezervată la locație</span>
+        <span class="italic">Ținuta de tip cocktail</span>
+        <div class="button-container">
+          <a href="https://www.google.com/maps" target="_blank">H A R T A</a>
         </div>
-		<!-- <div class="text-center">
-			<h1 class="text-[5rem] text-[#788343]" style="font-family: Fabiola;">Ne căsătorim</h1>
-			<h1 class="text-[3rem] text-[#788343]" style="font-family: Fabiola;">Raluca&Ducu</h1>
-			<h1 class="text-[3rem] text-[#788343]" style="font-family: Fabiola;">Cluj-Napoca</h1>
-			<h1 class="text-[3rem] text-[#788343]" style="font-family: Fabiola;">31 mai 2025</h1>
-			<h1 class="text-[3rem] text-[#788343]" style="font-family: Fabiola;">Ziua e mai frumoasă cu voi alături!</h1>
-		</div> -->
-		<!--<h1 class="text-[4rem] text-center text-white" style="font-family: Fabiola;">Raluca&Ducu</h1>
-		<h1 class="text-[3rem] text-center text-white" style="font-family: Fabiola;">Cluj-Napoca</h1>
-		<h1 class="text-[3rem] text-center text-white" style="font-family: Fabiola;">31 mai 2025</h1>
-		<h1 class="text-[3rem] text-center text-white" style="font-family: Fabiola;">Ziua e mai frumoasă cu voi alături!</h1> -->
-		<!-- <h1>Ne căsătorim</h1>
-        <div class="heart text-[5rem] text-center text-white" style="font-family: Fabiola;">❤️</div>
-		<h1 class="text-[5rem] text-center text-white" style="font-family: Fabiola;">Raluca&Ducu</h1>
-        <div class="details text-[5rem] text-center text-white" style="font-family: Fabiola;">Cluj-Napoca</div>
-        <div class="details text-[5rem] text-center text-white" style="font-family: Fabiola;">31 mai 2025</div>
-        <div class="message text-[5rem] text-center text-white" style="font-family: Fabiola;">Ziua e mai frumoasă cu voi alături!</div> -->
-		<!-- <h1 class="text-[5rem] text-center text-white" style="font-family: Fabiola;">Raluca&Ducu</h1> -->
-	</div>
-	<div id="section2" class="h-[100vh] bg-[#FBB01B] flex justify-center items-center">
-		<h1 class="text-[5rem] text-center text-white" style="font-family: Fabiola;">Party Details</h1>
-	</div>
-	<div id="section3" class="h-[100vh] bg-[#E06B83] flex justify-center items-center">
-		<h1 class="text-[5rem] text-center text-white" style="font-family: Fabiola;">Biserica Details</h1>
-	</div>
-	<div id="section4" class="flex flex-col bg-gradient-to-r from-[#40fff2] to-[#3fbcff] h-[100vh] justify-center items-center">
-		<h1 class="text-[5rem] text-center text-white" style="font-family: Fabiola;">RSVP mai jos</h1>
-		<div data-tally-open="wAbg4k" data-tally-layout="modal" data-tally-overlay="1"  data-tally-auto-close="4000" class="button-6" role="button">
-			<span> &nbsp; &nbsp; &nbsp; R S V P &nbsp; &nbsp; &nbsp; </span>
-		</div>
-		<!-- <button id="button" class="w-[160px] h-[78px] text-4xl py-6 bg-white text-center border-2 border-black rounded hover:border-blue hover:text-blue transition ease-in-out" data-tally-open="wAbg4k" id="RSVP" data-tally-layout="modal" data-tally-overlay="1" data-tally-width="398" data-tally-auto-close="4000" role="button" style="font-family: Fabiola;">RSVP</button> -->
-	</div>
+      </div>
+    <img class="image" src="images/flori_dark_down.png" alt="Bottom Image Right">
+  </div>
 </div>
-
-
-<!-- <script>
-	document.getElementById("button").addEventListener("click", () => {
-		document.getElementById("rsvp-modal").classList.remove("hidden");
-	});
-	document.getElementById("close-modal").addEventListener("click", () => {
-		document.getElementById("rsvp-modal").classList.add("hidden");
-	});
-</script> -->
-<!-- <script>
-	// Initialize EmailJS with your User ID
-	(function () {
-	  emailjs.init("0lEzScROS5Xkn39Kf"); // Replace "YOUR_USER_ID" with your EmailJS User ID
-	})();
-
-	// Handle form submission
-	document.querySelector("form").addEventListener("submit", function (e) {
-	  e.preventDefault(); // Prevent default form submission behavior
-
-	  // Collect form data
-	  const form = e.target;
-	  const formData = {
-		veniti_la_nunta: form.querySelector('input[name="veniti_la_nunta"]:checked').value || "No response",
-		name: form.querySelector('input[name="name"]').value,
-		cazare: Array.from(form.querySelectorAll('input[name="cazare"]:checked'))
-		  .map((checkbox) => checkbox.value)
-		  .join(", "),
-	  };
-
-	  // Send email using EmailJS
-	  emailjs -->
-		<!-- .send("service_gkz2f6e", "template_xy3l9c1", formData)
-		.then(
-		  (response) => {
-			alert("RSVP sent successfully! Thank you.");
-			form.reset(); // Reset the form after submission
-		  },
-		  (error) => {
-			console.error("Failed to send RSVP:", error);
-			alert("Failed to send RSVP. Please try again later.");
-		  }
-		);
-	});
-  </script> -->
-  <!-- <script>
-	const yesOption = document.getElementById('yes-option');
-	const noOption = document.getElementById('no-option');
-	const yesInput = yesOption.querySelector('input');
-	const noInput = noOption.querySelector('input');
-
-	function resetStyles() {
-		yesOption.style.borderColor = '#d1d5db'; // Gray-300
-		noOption.style.borderColor = '#d1d5db'; // Gray-300
-	}
-
-	yesOption.addEventListener('click', () => {
-		resetStyles();
-		yesInput.checked = true;
-		yesOption.style.borderColor = '#3b82f6'; // Blue-500
-	});
-
-	noOption.addEventListener('click', () => {
-		resetStyles();
-		noInput.checked = true;
-		noOption.style.borderColor = '#ef4444'; // Red-500
-	});
-
-	const cazareDa = document.getElementById('cazare-da');
-	const cazareNu = document.getElementById('cazare-nu');
-
-	// Add event listeners to uncheck the other box when one is checked
-	cazareDa.addEventListener('change', () => {
-		if (cazareDa.checked) {
-			cazareNu.checked = false; // Uncheck the "nu" checkbox
-		}
-	});
-
-	cazareNu.addEventListener('change', () => {
-		if (cazareNu.checked) {
-			cazareDa.checked = false; // Uncheck the "da" checkbox
-		}
-	});
-</script> -->
-<script>
-	const modal1 = document.querySelector('.modal');
-	if (window.innerWidth < 480) {
-  		modal1.style.width = '100%';
-  		modal1.style.height = '100%';
-	}
-	// Get all the sections
-	const sections = document.querySelectorAll('div[id^="section"]');
-	let isScrolling = false;
-
-	// Modal Elements
-	const modal = document.getElementById('rsvp-modal');
-	const openModalButton = document.getElementById('button');
-	const closeModalButton = document.getElementById('close-modal');
-
-	// Function to smoothly scroll to the next section
-	function scrollToNextSection() {
-		if (isScrolling) return; // Prevent multiple scroll triggers
-
-		isScrolling = true;
-
-		// Get the current scroll position
-		const currentScroll = window.scrollY;
-		const viewportHeight = window.innerHeight;
-
-		// Find the next section
-		for (let i = 0; i < sections.length; i++) {
-			const sectionTop = sections[i].offsetTop;
-			if (currentScroll + 1 < sectionTop) {
-				// Scroll to the next section
-				sections[i].scrollIntoView({ behavior: 'smooth' });
-				break;
-			}
-		}
-
-		// Allow scrolling after a short delay
-		setTimeout(() => {
-			isScrolling = false;
-		}, 1000); // Delay to prevent rapid firing
-	}
-
-	// Add a scroll event listener
-	window.addEventListener('scroll', () => {
-		// Don't trigger when modal is open
-		if (!modal.classList.contains('hidden')) return;
-
-		// Trigger the scroll to the next section
-		if (!isScrolling) {
-			const scrolledToBottom =
-				window.innerHeight + window.scrollY >= document.body.offsetHeight;
-			if (!scrolledToBottom) {
-				scrollToNextSection();
-			}
-		}
-	});
-
-	// // Modal Logic
-	// openModalButton.addEventListener('click', () => {
-	// 	modal.classList.remove('hidden');
-	// 	document.body.style.overflow = 'hidden'; // Disable scroll
-	// });
-
-	// closeModalButton.addEventListener('click', () => {
-	// 	modal.classList.add('hidden');
-	// 	document.body.style.overflow = ''; // Enable scroll
-	// });
-</script>
-
-
+<div class="section3">
+    <div class="text-box">
+        <h1>Ziua e mai frumoasa cu voi alaturi!</h1>
+        <p>Va rugam sa ne confirmati prezenta</p>
+        <div data-tally-open="wAbg4k" data-tally-layout="modal" data-tally-overlay="1" data-tally-auto-close="4000" class="button-6" role="button">
+          <span>R S V P</span>
+        </div>
+      </div>
+      <div class="image-container">
+        <div class="flowers">
+          <img src="images/flori_dark_double.png" alt="Flowers Image">
+        </div>
+      </div>
+</div>  
 </body>
 </html>
