--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 			<img class="image" src="images/flori_dark_down.png" alt="Bottom Image Right">
 		</div>
 	</div>
-	<!-- <div class="section3">
+	<div class="section3">
 		<div class="text-box">
 			<h1>Ziua e mai frumoasa cu voi alaturi!</h1>
 			<p>Va rugam sa ne confirmati prezenta</p>
@@ -380,7 +380,7 @@
 				<img src="images/flori_dark_double.png" alt="Flowers Image">
 			</div>
 		</div>
-	</div> -->
+	</div>
 </body>
 
 </html>
