revert first section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		}
 	</style>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-	<title>Responsive Images Layout</title>
+	<title>Raluca & Ducu</title>
 	<style>
 		body {
 			background-color: #1E2617;
@@ -245,6 +245,7 @@
 				/* Full height of the viewport for each image */
 				overflow: hidden;
 				object-fit: cover;
+				align-items: center;
 			}
 
 			.image-left img {
@@ -326,11 +327,11 @@
 
 <body>
 	<div class="container1">
-		<div class="image-left">
-			<img src="images/raluca_ducu_alternative.jpg" alt="Left Image">
-		</div>
 		<div class="image-right">
 			<img src="images/invite_dark_transparent.png" alt="Right Image">
+		</div>
+		<div class="image-left">
+			<img src="images/raluca_ducu_alternative.jpg" alt="Left Image">
 		</div>
 	</div>
 	<div class="section2">
