--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			justify-content: center;
 			width: 50%;
 			/* Half the width on large screens */
-			height: 100%;
+			height: 95vh;
 			/* Full height of the viewport */
 		}
 
@@ -165,6 +165,7 @@
 		.section2 {
 			display: flex;
 			flex-direction: row;
+			margin-top: 10px;
 		}
 
 		.text-box {
@@ -226,10 +227,30 @@
 			align-items: center;
 		}
 
+		html {
+			scroll-snap-type: y mandatory;
+		}
+
+		.section {
+			scroll-snap-align: start;
+			scroll-snap-stop: always;
+		}
+
 		@media (max-width: 768px) {
+			.section {
+				scroll-snap-align: none;
+				scroll-snap-stop: normal;
+			}
+
+			.subsection {
+				scroll-snap-align: start;
+				scroll-snap-stop: always;
+			}
+
 			.body {
 				align-items: center;
 			}
+
 			.container1 {
 				flex-direction: column;
 				/* Stack images vertically on small screens */
@@ -284,7 +305,7 @@
 			}
 
 			.group {
-				width: 100%;
+				width: auto;
 				/* Full width */
 				height: 100vh;
 				/* Full viewport height */
@@ -326,17 +347,17 @@
 </head>
 
 <body>
-	<div class="container1">
-		<div class="image-right">
+	<div class="container1 section" id="section1">
+		<div class="image-right subsection">
 			<img src="images/invite_dark_transparent.png" alt="Right Image">
 		</div>
-		<div class="image-left">
+		<div class="image-left subsection">
 			<img src="images/raluca_ducu_alternative.jpg" alt="Left Image">
 		</div>
 	</div>
-	<div class="section2">
+	<div class="section2 section" id="section2">
 		<!-- Left Group -->
-		<div class="group left-group">
+		<div class="group left-group subsection">
 			<img class="image" src="images/flori_dark_up.png" alt="Top Image Left">
 			<div class="text-container custom-text">
 				<p>C E R E M O N I A</p>
@@ -351,7 +372,7 @@
 		</div>
 
 		<!-- Right Group -->
-		<div class="group right-group">
+		<div class="group right-group subsection">
 			<img class="image" src="images/flori_dark_up.png" alt="Top Image Right">
 			<div class="text-container custom-text">
 				<p>C E L E B R A R E A</p>
@@ -367,7 +388,7 @@
 			<img class="image" src="images/flori_dark_down.png" alt="Bottom Image Right">
 		</div>
 	</div>
-	<div class="section3">
+	<div class="section3 section subsection" id="section3">
 		<div class="text-box">
 			<h1>Ziua e mai frumoasa cu voi alaturi!</h1>
 			<p>Va rugam sa ne confirmati prezenta</p>
