--- a/index.html
+++ b/index.html
@@ -265,15 +265,18 @@
 				/* Full width for each image */
 				height: 100vh;
 				/* Full height of the viewport for each image */
+				object-fit: contain;
+
 			}
 
 			.image-left img {
-				max-width: 100vw;
-				max-height: 100vh;
+				max-width: 100%;
+				max-height: 100%;
 				width: 100vw;
 				/* height: auto; */
 				align-self: center;
 				justify-self: center;
+				object-fit: contain;
 			}
 
 			.image-right {
