--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 			max-height: 40%;
 			object-fit: contain;
 			margin: 10px 0;
+			/* z-index: 2; */
 		}
 
 		.text {
@@ -92,7 +93,7 @@
 		}
 
 		.text-container {
-			z-index: -1;
+			z-index: 1;
 			flex: 1;
 			display: flex;
 			flex-direction: column;
@@ -100,7 +101,6 @@
 			justify-content: center;
 			padding: 20px;
 			box-sizing: border-box;
-			background-color: #1E2617;
 			text-align: center;
 			margin: -100px;
 		}
@@ -370,7 +370,7 @@
 				<span>Parohia Sf. Mare Mc. Mina</span>
 				<span class="detailsSpan">(Str. Vasile Conta 10, Cluj-Napoca, Cluj)</span>
 				<div class="button-container left-button">
-					<a href="https://www.google.com/maps" target="_blank">H A R T A</a>
+					<a href="https://maps.app.goo.gl/uChL2b6zvYpN1kPi7" target="_blank">H A R T A</a>
 				</div>
 			</div>
 			<img class="image flowers-down" src="images/flori_dark_down.png" alt="Bottom Image Left">
@@ -387,7 +387,7 @@
 				<span class="italic">Parcarea rezervată la locație</span>
 				<span class="italic">Ținuta de tip cocktail</span>
 				<div class="button-container">
-					<a href="https://www.google.com/maps" target="_blank">H A R T A</a>
+					<a href="https://maps.app.goo.gl/Amnj99S5QEdbJx6PA" target="_blank">H A R T A</a>
 				</div>
 			</div>
 			<img class="image flowers-down" src="images/flori_dark_down.png" alt="Bottom Image Right">
