add diacritice unde se poate

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 		}
 	</style>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.typekit.net/fgz7vkg.css">
 	<title>Raluca & Ducu</title>
 	<style>
 		body {
 			background-color: #1E2617;
 			margin: 0;
 			padding: 0;
-			font-family: Fabiola, serif;
+			font-family: "fabiola", serif;
+			/* font-weight: 700; */
 		}
 
 		.container1 {
@@ -220,7 +222,7 @@
 			/* Stack text and image vertically */
 			height: 100vh;
 			/* Full viewport height */
-			font-family: Fabiola, serif;
+			font-family: "fabiola", serif;
 			background-color: #1E2617;
 			justify-content: center;
 			/* Center both sections vertically */
@@ -395,8 +397,8 @@
 	</div>
 	<div class="section3 section subsection" id="section3">
 		<div class="text-box">
-			<h1>Ziua e mai frumoasa cu voi alaturi!</h1>
-			<p>Va rugam sa ne confirmati prezenta</p>
+			<h1>ZIUA E MAI FRUMOASA CU VOI ALATURI!</h1>
+			<p>Vă rugăm să ne confirmați prezența</p>
 			<div data-tally-open="wAbg4k" data-tally-layout="modal" data-tally-overlay="1" data-tally-auto-close="4000"
 				class="button-6" role="button">
 				<span>R S V P</span>
