--- a/index.html
+++ b/index.html
@@ -263,22 +263,27 @@
 			}
 
 			.image-left {
+				max-width: 100vw;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 				width: 100vw;
-				/* Full width for each image */
 				height: 100vh;
-				/* Full height of the viewport for each image */
-				object-fit: contain;
-
+				overflow: hidden;
+				/* Ensures no extra space appears */
 			}
 
 			.image-left img {
 				max-width: 100%;
 				max-height: 100%;
-				width: 100vw;
-				/* height: auto; */
-				align-self: center;
-				justify-self: center;
-				object-fit: contain;
+				object-fit: cover; /* Ensures the image fills the container */
+				width: auto;
+				/* Maintains aspect ratio */
+				height: auto;
+				/* Maintains aspect ratio */
+				margin: auto;
+				/* Ensures centering */
+				display: block;
 			}
 
 			.image-right {
