--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 	<div class="section3 section subsection" id="section3">
 		<div class="text-box">
 			<h1>ZIUA E MAI FRUMOASA CU VOI ALATURI!</h1>
-			<p>Vă rugăm să ne confirmați prezența</p>
+			<p>Vă rugăm să ne confirmați prezența până pe 01.05.2025</p>
 			<div data-tally-open="wAbg4k" data-tally-layout="modal" data-tally-overlay="1" data-tally-auto-close="4000"
 				class="button-6" role="button">
 				<span>R S V P</span>
